<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AChartEngine</string>
	<string name="add_values">Add values to the chart</string>    
	<string name="x">X</string>    
	<string name="y">Y</string>
	<string name="add">Add</string>
	<string name="new_series">New series</string>
	<string name="enable_button">EBUT</string>
	<string name="disable_button">DBUT</string>
	<string name="stop_button">STOP</string>
	<string name="start_button">START</string>
	<string name="clear_button">CLEAR</string>
	<string name="save_button">SAVE</string>
	<string name="zoom_y_plus">Y+</string>
	<string name="zoom_y_dec">Y-</string>
	<string name="zoom_x_plus">X+</string>
	<string name="zoom_x_dec">X-</string>
	<string name="series">series</string>
</resources>
