<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/add_values"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/series" android:padding="5dip"/>
        <EditText android:id="@+id/SeriesValue" android:layout_width="wrap_content"
                  android:inputType="number"
                  android:layout_height="wrap_content" android:layout_weight="1" android:enabled="true"/>

        <Button
            android:id="@+id/enable_button"
            android:text="@string/enable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true" />

        <Button android:id="@+id/disable_button" android:text="@string/disable_button"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:enabled="true"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/chart" android:orientation="horizontal"
                  android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="1"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:weightSum="1">
        <Button android:id="@+id/stop_button" android:text="@string/stop_button"
                android:layout_width="69dp" android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/save_button"
            android:text="@string/save_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.18" />

        <Button
            android:id="@+id/zoom_y_plus_button"
            android:text="@string/zoom_y_plus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/zoom_y_dec_button"
            android:text="@string/zoom_y_dec"
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/zoom_x_plus_button"
            android:text="@string/zoom_x_plus"
            android:layout_width="41dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/zoom_x_dec_button"
            android:text="@string/zoom_x_dec"
            android:layout_width="41dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
